:wrench: Fix spacing for Grid container

--- a/src/components/Grid/Grid.module.scss
+++ b/src/components/Grid/Grid.module.scss
@@ -2,9 +2,9 @@
 
 .container {
 	display: flex;
-	box-sizing: border-box;
 	flex-wrap: wrap;
-	width: 100%;
+	margin-right: -15px;
+	margin-left: -15px;
 }
 
 .item {
